k8s/services.yml
apiVersion: v1
kind: Service
metadata:
  name: kv-redis-service
  labels:
    app: kv-redis-service
spec:
  type: ClusterIP
  ports:
    - name: http-port
      port: 6379
      protocol: TCP
      targetPort: 6379
  selector:
    app: kv-redis-service

---
apiVersion: v1
kind: Service
metadata:
  name: app-service
  labels:
    web: app-service
spec:
  type: ClusterIP
  ports:
    - name: http-port
      port: 7002
      protocol: TCP
      targetPort: 7002
  selector:
    web: app-service
